# agents

./: .gitattributes  .gitignore  .mailmap  1_lab1.ipynb  3_lab3_fix.ipynb  3_way_convo_aj.py  ADVANCED_TRACK.md  Agent.txt  CAREER_GUIDE.md  COMMUNITY.md  Day4_Lab3.ipynb  Lab2Day3.ipynb  OUTCOMES.md  PRACTICE_PR.md  README.md  TLS_mTLS_Guide.md  WEEK2_CONTRIBUTION_SUMMARY.md  agents.code-workspace  app.py  example.ipynb  knowledge.db  lab2_llm_comparison.py  package-lock.json  package.json  pyproject.toml  requirements.txt  summary.txt  test.md  test.py  test_to_omniroute.py  vscode-extensions.txt  website_source.html  windowolf_chatbot.py  windowwolf.db
2_openai/community_contributions/emmy_news_summariser/: README.md  main.py  orchestrator.py  pyproject.toml
2_openai/community_contributions/emmy_news_summariser/agents/: __init__.py  audio_generator.py  base.py  news_aggregator.py  summarizer.py
3_crew/community_contributions/Igniters-Week3-Tunde_Wey/: pyproject.toml
3_crew/community_contributions/a3_ignitiers_adeyemi_kayode/: .gitignore  flight_ai_briefing.md  pyproject.toml
3_crew/community_contributions/best_school_teacher_picker/: README.md  pyproject.toml
3_crew/community_contributions/best_school_teacher_picker/knowledge/: user_preference.txt
3_crew/community_contributions/best_school_teacher_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/community_contributions/debate_m/: README.md  pyproject.toml
3_crew/community_contributions/debate_m/output/: debate_piglatin.md  debater_choice.md  decide.md  oppose.md  propose.md
3_crew/community_contributions/financialresearch_serp/: README.md  pyproject.toml
3_crew/community_contributions/financialresearch_serp/output/: report.md  research.md
3_crew/community_contributions/gym_rat/: pyproject.toml
3_crew/community_contributions/gym_rat/knowledge/: user_preference.txt
3_crew/community_contributions/housepurchase_debate/: README.md  pyproject.toml  report.md  requirements.txt
3_crew/community_contributions/housepurchase_debate/knowledge/: user_preference.txt
3_crew/community_contributions/idumachika_week3/: README.md  payment_inclusion_crew.py  pyproject.toml
3_crew/community_contributions/jira_crew/: README.md  app.py  config.py  env.example  pyproject.toml  requirements.txt
3_crew/community_contributions/laundry_system/: README.md  pyproject.toml  report.md
3_crew/community_contributions/laundry_system/crew2_output/: backend.md  devops.md  flutter.md  integration_notes.md
3_crew/community_contributions/laundry_system/generated_repo/: SQL Database Schema  config.js  index.js
3_crew/community_contributions/laundry_system/mobile_repo/: main.dart
3_crew/community_contributions/laundry_system/output/: backend_api.md  devops.md  flutter_app.md  mvp_scope.md  system_architecture.md
3_crew/community_contributions/riddle_competition/: pyproject.toml
3_crew/community_contributions/stockpicker_custom/: README.md  pyproject.toml
3_crew/debate_copy/: README.md  pyproject.toml
3_crew/debate_copy/src/debate_copy/: crew.py  main.py
3_crew/debate_engine/: README.md  pyproject.toml
3_crew/debate_engine/outputs/: closing_arguments.json  debate_results.json  defense_opening.json  defense_rebuttal.json  evidence.json  fact_check.json  final_verdict.json  prosecutor_opening.json  prosecutor_rebuttal.json
3_crew/debate_engine/src/debate_engine/: main.py
3_crew/debatetest/: README.md  pyproject.toml
3_crew/debatetest/src/debatetest/: crew.py  main.py
3_crew/engineering_team_flow/: README.md  pyproject.toml
3_crew/engineering_team_flow/src/engineering_team_flow/: main.py
3_crew/engineering_team_hierarchical/: README.md  pyproject.toml  ui.py
3_crew/engineering_team_hierarchical/src/engineering_team_hierarchical/: crew.py  main.py
3_crew/engineering_team_test/: README.md  pyproject.toml
3_crew/engineering_team_test/output/: accountstest.py  accountstest.py_design.md  app.py  test_accountstest.py
3_crew/engineering_team_test/src/engineering_team_test/: crew.py  main.py
3_crew/finance_research/: README.md  pyproject.toml
3_crew/finance_research/output/: report.md
3_crew/finance_research/src/finance_research/: crew.py  main.py
3_crew/monopolygame/: README.md  pyproject.toml
3_crew/monopolygame/knowledge/: user_preference.txt
3_crew/monopolygame/output/: code_and_output.txt
3_crew/monopolygame/src/monopolygame/: crew.py  main.py
3_crew/mycrew/: pyproject.toml
3_crew/mycrew/src/mycrew/: crew.py  main.py
3_crew/software_team_crew_hierarchical/: README.md  pyproject.toml  ui.py
3_crew/software_team_crew_hierarchical/src/software_team_crew_hierarchical/: crew.py  main.py
3_crew/software_team_flow_ui/: README.md  loaded_report.txt  pyproject.toml  ui.py
3_crew/software_team_flow_ui/src/software_team_flow_ui/: main.py
3_crew_copy/: README.md  help.md  pyproject.toml  quiz.md  research.md
3_crew_copy/quiz/: quiz.md  research.md
3_crew_copy/quiz/src/crew_copy/: crew.py
3_crew_copy/src/crew_copy/: crew.py  main.py
3_crew_copy/summarize/: README.md  article_summary.md  pyproject.toml  research.md  selected_article.md
3_crew_copy/summarize_hierarchical/: README.md  article_summary.md  pyproject.toml  research.md  selected_article.md
7_Crew_Test/financial_researcher/: pyproject.toml  requirements.txt
7_Crew_Test/financial_researcher/output/: investment_report.md  report.md
advanced_investment_crew/: README.md  debug_inputs.py  find_missing_vars.py  fix_all_placeholders.py  fix_yaml.py  pyproject.toml  requirements.txt  run.py  test_crew.py  test_yahoo.py  test_yaml_tasks.py
advanced_investment_crew/config/: market_config.yaml
advanced_investment_crew/output/: investment_report.md
advanced_investment_crew/prompts/: advanced_prompts.py
advanced_investment_crew/reports/: investment_report_20251215.md  investment_report_20251229.md
advanced_investment_crew/src/advanced_investment_crew/: __init__.py  cli.py  crew.py  main.py  run.py
advanced_investment_crew/utils/: knowledge_base_builder.py
(+2768 files in other folders)
