[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "openai>=2.34.0",
    "openai-agents[viz]>=0.15.1",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
]
