[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai>=2.34.0",
    "openai-agents[viz]>=0.15.1",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-pptx>=1.0.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "nbclient>=0.11.0",
    "nbconvert>=7.17.1",
]
