[project]
name = "crew_copy"
version = "0.1.0"
description = "crew_copy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,google-genai]==1.4.0",
    "litellm"
]

[project.scripts]
crew_copy = "crew_copy.main:run"
run_crew = "crew_copy.main:run"
train = "crew_copy.main:train"
replay = "crew_copy.main:replay"
test = "crew_copy.main:test"
run_with_trigger = "crew_copy.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
