[project]
name = "debate_copy"
version = "0.1.0"
description = "debate_copy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
debate_copy = "debate_copy.main:run"
run_crew = "debate_copy.main:run"
train = "debate_copy.main:train"
replay = "debate_copy.main:replay"
test = "debate_copy.main:test"
run_with_trigger = "debate_copy.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
