[project]
name = "debatetest"
version = "0.1.0"
description = "debatetest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
debatetest = "debatetest.main:run"
run_crew = "debatetest.main:run"
train = "debatetest.main:train"
replay = "debatetest.main:replay"
test = "debatetest.main:test"
run_with_trigger = "debatetest.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
