[project]
name = "engineering_team_flow"
version = "0.1.0"
description = "engineering_team_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.4.1",
    "gradio>=6.0.1",
]

[project.scripts]
kickoff = "engineering_team_flow.main:kickoff"
run_crew = "engineering_team_flow.main:kickoff"
plot = "engineering_team_flow.main:plot"
run_with_trigger = "engineering_team_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
