[project]
name = "engineering_team_copy"
version = "0.1.0"
description = "engineering_team_copy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "gradio>=5.50.0",
]

[project.scripts]
engineering_team_copy = "engineering_team_copy.main:run"
run_crew = "engineering_team_copy.main:run"
train = "engineering_team_copy.main:train"
replay = "engineering_team_copy.main:replay"
test = "engineering_team_copy.main:test"
run_with_trigger = "engineering_team_copy.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
