[project]
name = "engineering_team_test"
version = "0.1.0"
description = "engineering_team_test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "gradio>=6.9.0",
]

[project.scripts]
engineering_team_test = "engineering_team_test.main:run"
run_crew = "engineering_team_test.main:run"
train = "engineering_team_test.main:train"
replay = "engineering_team_test.main:replay"
test = "engineering_team_test.main:test"
run_with_trigger = "engineering_team_test.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
