[project]
name = "finance_research"
version = "0.1.0"
description = "finance_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.11.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
finance_research = "finance_research.main:run"
run_crew = "finance_research.main:run"
train = "finance_research.main:train"
replay = "finance_research.main:replay"
test = "finance_research.main:test"
run_with_trigger = "finance_research.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
