[project]
name = "software_team_crew_hierarchical"
version = "0.1.0"
description = "software_team_crew_hierarchical using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.4.1",
    "gradio>=6.0.2",
]

[project.scripts]
software_team_crew_hierarchical = "software_team_crew_hierarchical.main:run"
run_crew = "software_team_crew_hierarchical.main:run"
train = "software_team_crew_hierarchical.main:train"
replay = "software_team_crew_hierarchical.main:replay"
test = "software_team_crew_hierarchical.main:test"
run_with_trigger = "software_team_crew_hierarchical.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
