[project]
name = "summarize"
version = "0.1.0"
description = "summarize using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,google-genai]==1.4.0",
    "litellm",
    "firecrawl-py"
]

[project.scripts]
summarize = "summarize.main:run"
run_crew = "summarize.main:run"
train = "summarize.main:train"
replay = "summarize.main:replay"
test = "summarize.main:test"
run_with_trigger = "summarize.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
