[project]
name = "news-summarizer"
version = "0.1.0"
description = "AI-powered news summarizer with audio generation"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.12.0",
    "google-generativeai>=0.3.0",
    "google-cloud-texttospeech>=2.16.0",
    "feedparser>=6.0.10",
    "gradio>=4.19.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"