[project]
name = "igniters_week3"
version = "0.1.0"
description = "Lesson plan crew (research → author → critic) using Google Gemini — Igniters Week 3 (Tunde Wey)"
authors = [{ name = "Tunde Wey", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    # No [tools] extra — avoids lancedb / extras that often break on Windows arm64/amd64 edge cases.
    # LLM-only lesson pipeline (no Serper / extra tools).
    "crewai>=0.175.0,<1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
igniters_week3 = "igniters_week3.main:run"
run_crew = "igniters_week3.main:run"
train = "igniters_week3.main:train"
replay = "igniters_week3.main:replay"
test = "igniters_week3.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
