[project]
name = "a3_ignitiers_flight_ai_researcher"
version = "0.1.0"
description = "A3 Ignitiers — flight & aviation agentic-AI research crew (CrewAI)"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.1"
]

[project.scripts]
a3_ignitiers_flight_ai_researcher = "flight_ai_researcher.main:run"
run_crew = "flight_ai_researcher.main:run"
train = "flight_ai_researcher.main:train"
replay = "flight_ai_researcher.main:replay"
test = "flight_ai_researcher.main:test"
run_with_trigger = "flight_ai_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_ai_researcher"]

[tool.crewai]
type = "crew"
