[project]
name = "best_school_teacher_picker"
version = "0.1.0"
description = "best_School_Teacher_Picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
best_school_teacher_picker = "best_school_teacher_picker.main:run"
run_crew = "best_school_teacher_picker.main:run"
train = "best_school_teacher_picker.main:train"
replay = "best_school_teacher_picker.main:replay"
test = "best_school_teacher_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
