[project]
name = "debate_m"
version = "0.1.0"
description = "debate_m using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,litellm,tools]==1.10.1",
]

[project.scripts]
debate_m = "debate_m.main:run"
run_crew = "debate_m.main:run"
train = "debate_m.main:train"
replay = "debate_m.main:replay"
test = "debate_m.main:test"
run_with_trigger = "debate_m.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
