[project]
name = "financialresearch_serp"
version = "0.1.0"
description = "financialresearch_serp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
financialresearch_serp = "financialresearch_serp.main:run"
run_crew = "financialresearch_serp.main:run"
train = "financialresearch_serp.main:train"
replay = "financialresearch_serp.main:replay"
test = "financialresearch_serp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
