[project]
name = "gym_rat"
version = "0.1.0"
description = "fitness and meal planning agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"

dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "python-dotenv",
    "openai"
]

[project.scripts]
gym-rat = "gym_rat.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"