[project]
name = "idumachika-week3"
version = "0.1.0"
description = "Week 3 CrewAI assessment — multi-agent payments & inclusion brief"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
