[project]
name = "jira_crew"
version = "0.1.0"
description = "CrewAI multi-agent Jira support with Gemini and Streamlit"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[google-genai,tools]>=0.70.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_crew"]
