[project]
name = "laundry_system"
version = "0.1.0"
description = "laundry_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
laundry_system = "laundry_system.main:run"
run_crew = "laundry_system.main:run"
train = "laundry_system.main:train"
replay = "laundry_system.main:replay"
test = "laundry_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
