[project]
name = "debater"
version = "0.1.0"
description = "debater using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "litellm>=1.75.3",
]

[project.scripts]
debater = "debater.main:run"
run_crew = "debater.main:run"
train = "debater.main:train"
replay = "debater.main:replay"
test = "debater.main:test"
run_with_trigger = "debater.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
