[project]
name = "stockpicker_custom"
version = "0.1.0"
description = "StockPicker_custom using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
stockpicker_custom = "stockpicker_custom.main:run"
run_crew = "stockpicker_custom.main:run"
train = "stockpicker_custom.main:train"
replay = "stockpicker_custom.main:replay"
test = "stockpicker_custom.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
